--- a/01. EDA.ipynb
+++ b/01. EDA.ipynb
@@ -8,13 +8,11 @@
     "\n",
     "**Context**\n",
     "\n",
-    "This data set is created only for the learning purpose of the customer segmentation concepts , also known as market basket analysis.\n",
-    "Content\n",
+    "This data set is created only for the learning purpose of the customer segmentation concepts, also known as market basket analysis.\n",
     "\n",
     "**Problem Statement**\n",
     "\n",
-    "You are owing a supermarket mall and through membership cards, you have some basic data about your customers like Customer ID, age, gender, annual income and spending score. Spending Score is something you assign to the customer based on your defined parameters like customer behavior and purchasing data.\n",
-    "\n"
+    "You are owing a supermarket mall and through membership cards, you have some basic data about your customers like Customer ID, age, gender, annual income and spending score. Spending Score is something you assign to the customer based on your defined parameters like customer behavior and purchasing data."
    ]
   },
   {
