--- a/01. EDA.ipynb
+++ b/01. EDA.ipynb
@@ -12,7 +12,20 @@
     "\n",
     "**Problem Statement**\n",
     "\n",
-    "You are owing a supermarket mall and through membership cards, you have some basic data about your customers like Customer ID, age, gender, annual income and spending score. Spending Score is something you assign to the customer based on your defined parameters like customer behavior and purchasing data."
+    "You are owing a supermarket mall and through membership cards, you have some basic data about your customers like Customer ID, age, gender, annual income and spending score. Spending Score is something you assign to the customer based on your defined parameters like customer behavior and purchasing data.\n",
+    "\n",
+    "\n",
+    "**Data Description**\n",
+    "\n",
+    "This dataset is composed by the following five features:\n",
+    "\n",
+    "- **CustomerID:** Unique ID assigned to the customer\n",
+    "- **Gender:** Gender of the customer\n",
+    "- **Age:** Age of the customer\n",
+    "- **Annual Income (k$):** Annual Income of the customer\n",
+    "- **Spending Score (1-100):** Score assigned by the mall based on customer behavior and spending nature.\n",
+    "\n",
+    "In this particular dataset we have 200 samples to study."
    ]
   },
   {
