--- a/02. Clustering (K-means).ipynb
+++ b/02. Clustering (K-means).ipynb
@@ -392,7 +392,7 @@
     "  \n",
     "for k in K: \n",
     "    # Setup K-Means model     \n",
-    "    model = KMeans(n_clusters = k, random_state = 42).fit( df_scaled ) \n",
+    "    model = KMeans(n_clusters = k, random_state = 42)\n",
     "    \n",
     "    # Fit model\n",
     "    model.fit( df_scaled )     \n",
